[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://level.tscn" type="PackedScene" id=2]
[ext_resource path="res://crosshair.png" type="Texture" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="OutsideCamera" type="Camera" parent="."]
transform = Transform( 0.942835, -0.0864209, 0.321861, -0.00172931, 0.96451, 0.26404, -0.333257, -0.249503, 0.909224, 8.91542, 6.7527, 24.7167 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="ViewportContainer/CenterContainer"]
material = SubResource( 1 )
margin_left = 624.0
margin_top = 344.0
margin_right = 656.0
margin_bottom = 376.0
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Flash" type="ColorRect" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0, 0, 0 )

[node name="EnemyLabel" type="Label" parent="ViewportContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 14.0
text = "Enemies: 0/0"

[node name="TimeLabel" type="Label" parent="ViewportContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 14.0
text = "Time: 0"
align = 2

[node name="StartPopup" type="PopupDialog" parent="ViewportContainer"]
visible = true
margin_left = 300.0
margin_top = 200.0
margin_right = 980.0
margin_bottom = 520.0
rect_min_size = Vector2( 500, 300 )

[node name="StartButton" type="Button" parent="ViewportContainer/StartPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -50.0
margin_right = -10.0
margin_bottom = -10.0
text = "Start"

[node name="ExitButton" type="Button" parent="ViewportContainer/StartPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 210.0
margin_bottom = -10.0
text = "Exit"

[node name="GridContainer" type="GridContainer" parent="ViewportContainer/StartPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 70.0
margin_right = -10.0
margin_bottom = -60.0
columns = 2

[node name="SeedLabel" type="Label" parent="ViewportContainer/StartPopup/GridContainer"]
margin_right = 456.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 3
text = "Level seed:"
valign = 1

[node name="SeedSpinBox" type="SpinBox" parent="ViewportContainer/StartPopup/GridContainer"]
margin_left = 460.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
max_value = 10000.0
value = 10.0
rounded = true

[node name="SizeLabel" type="Label" parent="ViewportContainer/StartPopup/GridContainer"]
margin_top = 44.0
margin_right = 456.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Level size"
valign = 1

[node name="SizeSpinBox" type="SpinBox" parent="ViewportContainer/StartPopup/GridContainer"]
margin_left = 460.0
margin_top = 44.0
margin_right = 660.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 40 )
min_value = 4.0
max_value = 8.0
value = 5.0
rounded = true

[node name="InvertYLabel" type="Label" parent="ViewportContainer/StartPopup/GridContainer"]
margin_top = 93.0
margin_right = 456.0
margin_bottom = 107.0
text = "Invert pitch control"

[node name="InvertCheckBox" type="CheckBox" parent="ViewportContainer/StartPopup/GridContainer"]
margin_left = 460.0
margin_top = 88.0
margin_right = 660.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="ViewportContainer/StartPopup"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 60.0
text = "Start a new match"
align = 1
valign = 1

[node name="Entities" type="Spatial" parent="."]

[node name="Player" parent="Entities" instance=ExtResource( 4 )]

